--- a/todo-app/war/index.html
+++ b/todo-app/war/index.html
@@ -6,6 +6,11 @@
         <script src="touch/sencha-touch.js" type="text/javascript"></script>
         <script src="js/application.js" type="text/javascript"></script>
         <link href="touch/resources/css/sencha-touch.css" rel="stylesheet" type="text/css" />
+        <link href="css/application.css" rel="stylesheet" type="text/css" />
     </head>
-    <body></body>
+    <body>
+    
+    <div id="addItemForm">
+	</div>
+    </body>
 </html>
