--- a/todo-app/war/index.html
+++ b/todo-app/war/index.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>TODO Manager</title>
         <script src="touch/sencha-touch.js" type="text/javascript"></script>
+        <script src="js/Ext.ux.touch.DateTimePicker.js" type="text/javascript"></script>
         <script src="js/application.js" type="text/javascript"></script>
         <link href="touch/resources/css/sencha-touch.css" rel="stylesheet" type="text/css" />
         <link href="css/application.css" rel="stylesheet" type="text/css" />
