format list items

--- a/todo-app/war/index.html
+++ b/todo-app/war/index.html
@@ -11,9 +11,5 @@
         <script src="js/Viewport.js" type="text/javascript"></script>
         <script src="js/application.js" type="text/javascript"></script>
     </head>
-    <body>
-    
-    <div id="addItemForm">
-	</div>
-    </body>
+    <body></body>
 </html>
